--- a/package.json
+++ b/package.json
@@ -3,6 +3,7 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "axios": "^0.18.0",
     "final-form": "^4.6.1",
     "lodash": "^4.17.10",
     "prop-types": "^15.6.1",
@@ -10,8 +11,12 @@
     "react-dom": "^16.3.2",
     "react-final-form": "^3.4.0",
     "react-particles-js": "^2.1.3",
+    "react-redux": "^5.0.7",
     "react-router-dom": "^4.2.2",
     "react-scripts": "1.1.4",
+    "redux": "^4.0.0",
+    "redux-actions": "^2.3.2",
+    "redux-saga": "^0.16.0",
     "styled-components": "^3.2.6"
   },
   "scripts": {
