--- a/package.json
+++ b/package.json
@@ -6,14 +6,17 @@
     "axios": "^0.18.0",
     "final-form": "^4.6.1",
     "lodash": "^4.17.10",
+    "moment": "^2.22.1",
     "prop-types": "^15.6.1",
     "react": "^16.3.2",
     "react-dom": "^16.3.2",
+    "react-easy-chart": "^1.0.0",
     "react-final-form": "^3.4.0",
     "react-particles-js": "^2.1.3",
     "react-redux": "^5.0.7",
     "react-router-dom": "^4.2.2",
     "react-scripts": "1.1.4",
+    "recompose": "^0.27.1",
     "redux": "^4.0.0",
     "redux-actions": "^2.3.2",
     "redux-saga": "^0.16.0",
